--- a/.github/workflows/generated-macos-11-py3-x86-64.yml
+++ b/.github/workflows/generated-macos-11-py3-x86-64.yml
@@ -127,9 +127,8 @@ jobs:
           # Install dependencies
           brew install libomp
       - name: Parse ref
-        shell: bash
         id: parse-ref
-        run: .github/scripts/parse_ref.py
+        run: python3 .github/scripts/parse_ref.py
       - name: Test
         run: |
           python3 -mpip install dist/*.whl
@@ -240,9 +239,8 @@ jobs:
           # Install dependencies
           brew install libomp
       - name: Parse ref
-        shell: bash
         id: parse-ref
-        run: .github/scripts/parse_ref.py
+        run: python3 .github/scripts/parse_ref.py
       - name: Test
         run: |
           python3 -mpip install dist/*.whl
