--- a/.github/workflows/generated-periodic-linux-xenial-cuda11.1-py3.7-gcc7-debug.yml
+++ b/.github/workflows/generated-periodic-linux-xenial-cuda11.1-py3.7-gcc7-debug.yml
@@ -159,7 +159,7 @@ jobs:
           retry docker pull "${DOCKER_IMAGE}"
       - name: Parse ref
         id: parse-ref
-        run: python .github/scripts/parse_ref.py
+        run: echo $GITHUB_REF && .github/scripts/parse_ref.py
       - name: Build
         env:
           BRANCH: ${{ steps.parse-ref.outputs.branch }}
@@ -349,7 +349,7 @@ jobs:
           sudo df -H
       - name: Parse ref
         id: parse-ref
-        run: python .github/scripts/parse_ref.py
+        run: echo $GITHUB_REF && .github/scripts/parse_ref.py
       - name: Test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -599,7 +599,7 @@ jobs:
           sudo df -H
       - name: Parse ref
         id: parse-ref
-        run: python .github/scripts/parse_ref.py
+        run: echo $GITHUB_REF && .github/scripts/parse_ref.py
       - name: Test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -849,7 +849,7 @@ jobs:
           sudo df -H
       - name: Parse ref
         id: parse-ref
-        run: python .github/scripts/parse_ref.py
+        run: echo $GITHUB_REF && .github/scripts/parse_ref.py
       - name: Test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
